# xopscrew-ai-assistant

./: README.md  pyproject.toml
src/xopscrew_ai_assistant/: crew.py  main.py
